XSCOLIBRI-109: Error / Warning / Info messages inline overlap with surrounding text and eachother XSTOUCAN-124: Error / Warning / Info messages inline overlap with surrounding text and eachother XSALBATROSS-63: Error / Warning / Info messages inline overlap with surrounding text and eachother Fixed with help from Marta Girdea.
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/platform/skins/trunk@23666 f329d543-caf0-0310-9063-dda96c69346f

--- a/xwiki-platform-albatross/src/main/resources/albatross/presentation.css
+++ b/xwiki-platform-albatross/src/main/resources/albatross/presentation.css
@@ -257,6 +257,14 @@ Messages
   color: #F00;
 }
 
+span.errormessage, span.warningmessage, span.infomessage, span.plainmessage {
+  background-position: 2px center;
+  overflow: visible;
+  padding: 0 2px 0 22px;
+  white-space: normal;
+  font-size: 100%;
+}
+
 span.messagetype{
   display: none;
 }
